# cosupport-rag

./: .dockerignore  Dockerfile  README.md  pyproject.toml
data/: rag_data.csv
notebooks/: Data Exploration.ipynb
src/: dashboard.py  rag.py  variables.py
tests/: conftest.py  test_vector_db.py
