[tool.poetry]
name = "cosupport-rag"
version = "0.1.0"
description = ""
authors = ["Davit98 <dvmartirosyan@gmail.com>"]
readme = "README.md"
packages = [{include = "cosupport_rag"}]

[tool.poetry.dependencies]
python = "3.10.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
